[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Wolf.gd" type="Script" id=1]
[ext_resource path="res://sprites/Characters/wolf.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 7.42857, 5.47991 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 13.2095, 10 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 7.63318, 10 )

[sub_resource type="RayShape2D" id=6]

custom_solver_bias = 0.0
length = 18.6975

[node name="Wolf" type="Node2D"]

[node name="wolf" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.07692, 0, 0, 1.58854, 2, 5.30839 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wolf"]

transform/pos = Vector2( 2, 5.30839 )
transform/scale = Vector2( 1.07692, 1.58854 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="wolf"]

transform/pos = Vector2( 1, -2 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="wolf"]

visibility/behind_parent = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2, 4 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wolf/Area2D"]

transform/pos = Vector2( 2, 4 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="attack" type="Area2D" parent="wolf"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 26.9173, 0, 0, 14.0567, 12.4256, -4.27553 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wolf/attack"]

transform/pos = Vector2( 12.4256, -4.27553 )
transform/scale = Vector2( 26.9173, 14.0567 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="jump" type="Area2D" parent="wolf"]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1.19249e-08, 1, -1, 1.19249e-08, 0.463932, 7.53888 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="wolf/jump"]

transform/pos = Vector2( 0.463932, 7.53888 )
transform/rot = 270.0
shape = SubResource( 6 )
trigger = true
_update_shape_index = 0

[connection signal="body_enter" from="wolf/Area2D" to="wolf" method="_on_Area2D_body_enter"]

[connection signal="body_enter" from="wolf/attack" to="wolf" method="_on_attack_body_enter"]

[connection signal="body_exit" from="wolf/attack" to="wolf" method="_on_attack_body_exit"]

[connection signal="body_enter" from="wolf/jump" to="wolf" method="_on_jump_body_enter"]


